[project]
name = "data-science-bootcamp-lecture-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "openai>=1.106.0",
    "pypdf>=6.0.0",
    "rich>=14.1.0",
    "streamlit>=1.49.1",
]
